tests/baselines/reference/esDecorators-classExpression-missingEmitHelpers-classDecorator.3.errors.txt
main.ts(4,17): error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
main.ts(4,17): error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
main.ts(4,17): error TS2343: This syntax requires an imported helper named '__setFunctionName' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== main.ts (3 errors) ====
    declare var dec: any;
    
    // uses __esDecorate, __runInitializers, __setFunctionName
    export default (@dec class {});
                    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
                    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__setFunctionName' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    
==== tslib.d.ts (0 errors) ====
    export {}
    